[2111] Improve stakeholder creation tool
Bug: https://github.com/eclipse-syson/syson/issues/2111
Signed-off-by: Guillaume Coutable <guillaume.coutable@obeo.fr>